# phase_field

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmark/: CMakeLists.txt
benchmark/src/: predict.cc
cmake/: clang_format.cmake  config.cmake.in  cppcheck.cmake  filesystem.cmake  git-version.cmake  install.cmake
phase_field/: io.hh  param.hh  phase_field.hh  util.hh
phase_field/impl/: color.hh  derivative.hh  functor.hh  state.hh  type.hh
src/: dat2vtk_2d.cc  phase_field_2d.cc
